# pillbug

./: .coverage  .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  IMPLEMENTATION_PLAN.md  README.md  compose.yaml  docker-entrypoint.sh  pyproject.toml  run.sh
app/: __init__.py  __main__.py  mcp.py
app/core/: agent_card.py  ai.py  cache.py  config.py  jinja.py  log.py  redis.py  telemetry.py  url_shortener.py
app/mcp/: __init__.py  __main__.py  auth.py  server.py  shared.py
app/middleware/: compactor.py  telemetry.py
app/prompts/: a2a_channel_memo.prompt.md  compress.prompt.md  compressed_session_history.prompt.md  direct_reply_channel_memo.prompt.md  empty_model_response_fallback.prompt.md  empty_response_nudge.prompt.md  model_input.prompt.md  skills.prompt.md  summarize.prompt.md  task.prompt.md  task_contract_cron.prompt.md  task_contract_oneshot.prompt.md  task_contract_repeat.prompt.md  telegram_channel_memo.prompt.md  unknown_tool_nudge.prompt.md
app/runtime/: __init__.py  approvals.py  channel_helpers.py  channels.py  command_execution.py  commands.py  loop.py  mcp_plugins.py  outbound_budget.py  outbound_dispatch.py  pipeline.py  scheduler.py  session_binding.py  session_mode.py  session_telemetry.py  task_runtime_state.py  task_store.py
app/schema/: agent_card.py  ai.py  control.py  log_entry.py  mcp_config.py  messages.py  tasks.py  telemetry.py  todo.py  url_shortener.py
app/util/: clock.py  compaction.py  rehydration.py  session_history.py  skills.py  text.py  tool_result.py  web.py  workspace.py
doc/: CONFIGURATION.md  INSTALL.md  dashboard-improvements-plan.md  native-audio-plan.md  optimization-plan.md
doc/common/: example_AGENTS.md  example_mcp.json  example_trigger_sources.json
doc/multi/: example.compose.yaml  example_alerts.env  example_arca.env  example_assistant.env  example_cron-worker.env  example_dashboard.env  example_genai-proxy.env  example_generalist.env  example_runtime-a.env  example_runtime-b.env
doc/simple/: example_runtime.env
skills/arca-memory/: SKILL.md
skills/bluesky/: SKILL.md
skills/dreaming/: SKILL.md
skills/feed-reader/: SKILL.md
skills/financial-assistant/: SKILL.md
skills/gmail/: SKILL.md
skills/service-health/: SKILL.md
skills/sleep/: SKILL.md
skills/tavily-search/: SKILL.md
skills/text-to-speech/: SKILL.md
skills/threads/: SKILL.md
tests/: conftest.py
tests/agent_evals/: conftest.py  test_external_send_requires_approval.py  test_planning_mode_blocks_writes.py  test_prompt_injection_via_fetched_content.py
tests/integration/: _mcp_loader_fixtures.py  test_agents_md_cache.py  test_cache_telemetry.py  test_channel_plugin_loader.py  test_command_approvals.py  test_compaction_rehydration.py  test_compaction_rollback.py  test_dangerous_mode.py  test_drafts_telemetry.py  test_execute_command_env.py  test_execute_command_status.py  test_fetch_url_trust_banner.py  test_inbound_attachment_roots.py  test_mcp_path_sandbox.py  test_mcp_plugin_loader.py  test_mcp_tool_errors.py  test_optional_plugin_packages.py  test_outbound_drafts.py  test_outbound_send_budget.py  test_pipeline.py  test_planning_mode.py  test_prompt_cache_layout.py  test_runtime_commands.py  test_scheduled_task_goal.py  test_scheduler_session_close.py  test_security_patterns.py  (+9 more)
(+50 files in other folders)
