[project]
name = "pillbug"
version = "0.1.0"
description = "AI agent operating system"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiocache>=0.12.3",
    "aiohttp>=3.13.3",
    "asgi-correlation-id>=4.3.4",
    "fastapi>=0.135.1",
    "fastmcp[tasks]>=3.1.0",
    "google-genai>=1.67.0",
    "jinja2>=3.1.6",
    "loguru>=0.7.3",
    "redis>=7.3.0",
]

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project.scripts]
pillbug = "app.__main__:entrypoint"

[tool.uv]
package = true

[tool.ruff]
line-length = 120

[tool.ruff.lint]
ignore = ["TC001", "TC002", "TC003", "E501", "RUF012"]
unfixable = ["TC"]
