[project]
name = "pillbug"
version = "0.1.0"
description = "Async AI agent runtime"
readme = "README.md"
requires-python = ">=3.14"
license-files = ["LICENSE"]
authors = [{ name = "Viktor Tereshchenko", email = "m0nochr0me@gmail.com" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
    "Typing :: Typed",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Information Technology",
    "Operating System :: OS Independent",
    "Topic :: Internet",
]
dependencies = [
    "aiocache>=0.12.3",
    "aiofile>=3.9.0",
    "aiohttp>=3.13.3",
    "asgi-correlation-id>=4.3.4",
    "fakeredis>=2.34.1",
    "fastapi>=0.135.1",
    "fastmcp[tasks]>=3.1.0",
    "google-genai>=1.67.0",
    "jinja2>=3.1.6",
    "loguru>=0.7.3",
    "pydantic>=2.0",
    "pydocket>=0.18.2",
    "redis>=7.3.0",
]

[project.optional-dependencies]
a2a = ["pillbug-a2a"]
telegram = ["pillbug-telegram"]
dashboard = ["pillbug-dashboard"]
trigger = ["pillbug-trigger"]

[project.urls]
Homepage = "https://github.com/m0nochr0me/pillbug"
Repository = "https://github.com/m0nochr0me/pillbug"

[build-system]
requires = ["uv_build>=0.10.9,<0.11.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "app"
module-root = ""

[project.scripts]
pillbug = "app.__main__:entrypoint"

[tool.uv]
package = true

[tool.uv.sources]
pillbug-a2a = { workspace = true }
pillbug-telegram = { workspace = true }
pillbug-dashboard = { workspace = true }
pillbug-trigger = { workspace = true }

[tool.uv.workspace]
members = ["packages/*"]

[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]
line-length = 120
target-version = "py314"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP"]
ignore = ["TC001", "TC002", "TC003", "E501", "RUF012", "C901"]
unfixable = ["TC"]

[dependency-groups]
dev = ["pre-commit>=4.5.1", "ruff>=0.15.6"]
